finish UI and wire up to endpoints

--- a/taskscheduler/src/components/UI/TaskCard.css
+++ b/taskscheduler/src/components/UI/TaskCard.css
@@ -17,6 +17,11 @@
     color: #31336A;
 }
 
+.card:hover {
+    cursor: pointer;
+    color: #5475CA;
+}
+
 .list {
     table-layout: fixed;
     width: 100%;
