--- a/taskscheduler/src/components/UI/Button.css
+++ b/taskscheduler/src/components/UI/Button.css
@@ -1,8 +1,9 @@
 .primary {
   background-color: #5475CA;
   color: #FFFFFF;
-  height: 2.5rem;
-  width: 5rem;
+  height: 36px;
+  width: 80px;
+  padding: 0.5rem 1.5rem;
   margin: 0.5rem;
   border-radius: 15px;
   border: none;
