--- a/taskscheduler/src/components/ConfirmDeleteModal.module.css
+++ b/taskscheduler/src/components/ConfirmDeleteModal.module.css
@@ -2,5 +2,11 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin: 0.5rem 4rem;
+    margin: 0.5rem 1rem;
+}
+
+.close {
+    margin-top: 1rem;
+    display: flex;
+    align-self: center;
 }
