--- a/taskscheduler/src/components/UI/Button.css
+++ b/taskscheduler/src/components/UI/Button.css
@@ -1,4 +1,7 @@
 .primary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #5475CA;
   color: #FFFFFF;
   height: 36px;
