--- a/taskscheduler/src/components/pages/AllTasksList.module.css
+++ b/taskscheduler/src/components/pages/AllTasksList.module.css
@@ -1,9 +1,10 @@
 .page {
-    /* background-color: aquamarine; */
     display: flex;
     margin-top: 5rem;
     flex-direction: column;
     justify-content: center;
+    height: 100%;
+    background-color: white;
 }
 
 .sort {
